			SWI-Prolog ChangeLog
			====================

  * PERFORMANCE: better implementation finding clauses, much faster
    shallow backtracking code.  Faster lookup of arithmetic and small
    improvements to the compiler.

  * FIXED: bug loosing clause-indexing after abolish on an undefined
    predicate (caused by MT redesign).

  * FIXED: load .pl files rather then .qlf if user told us so.  Thanks to
    Holger Kanwischer.

  * MODIFIED: use ; as separator for the -p alias=path1:path2 option
    on MS-Windows.  Mike Elston.

  * FIXED: deadlock reconsuling files with breakpoints (debugger).

  * FIXED: remove rc/rc.o from libpl.a (anonymous).

  * FIXED/ENHANCED: many issues use call_with_depth_limit/3: fixed
    determinism	test, handle exceptions, handle user-defined arithmetic
    and report exceeded limit in the debugger.  With help of Steve Moyle.

  * FIXED: Improve error message if a user-arithmetic function fails.

  * FIXED: module-transparency of is/2, etc to make arithmetic function
    declarations work again.  Steve Moyle.

  * ADDED: edit/0 to edit the default script- (-s file) or associated file.

  * LIBRARY: make read_line_to_codes return the atom end_of_file upon reaching
    the end of file.

  * PORT: improve portability of SWI-Prolog.h and SWI-cpp.h after comments
    from Silvio Malisani concerning Borland's C++ Builder 5.I.

  * FIXED: preserve exceptions with the GUI-tracer over callbacks to the
    tracer.


VERSION 5.1.0 (Oct 26, 2002)
============================

  * FIXED: call_cleanup/3 when called directly from PL_next_solution()
    or tail-recursively from the initial goal.

  * ENHANCED: use per-message-queue mutex for synchronising the
    queue access in the MT version.  Sergey Tikhonov.

  * PORT: Check whether mmap() can map regular files and check for
    the need of _XOPEN_SOURCE.  Fixes QNX portability. See
    http://gollem.swi.psy.uva.nl/twiki/pl/bin/view/Porting/BuildQNX
    