@@ -1,6 +1,8 @@
 			SWI-Prolog ChangeLog
 			====================
 
+  * FIXED: handle abort-exception from -g goal to go to the toplevel.
+
   * PERFORMANCE: better implementation finding clauses, much faster
     shallow backtracking code.  Faster lookup of arithmetic and small
     improvements to the compiler.
